# final-project-windgpt

./: .gitignore  README.md  architecture.drawio  pyproject.toml  try.py
examples/: main.py
src/: __init__.py  data_loader.py
src/WPF/: __init__.py  data_loader.py  models.py
tests/: test_data_loader.py  test_init.py  test_models.py
tests/data/: test.csv
