# An extremely simple pyproject.toml
# Many more options here: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# How to build your package. "[S]trongly recommended" to include this,
# per the docs. We use hatchling, default on Python docs.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Information on the package
[project]
name = "WPF"
description = "Wind Power Forecating project for the DTU course 46120"
version = "0.0.1"
authors = [
    { name = "Marco Saretta", email = "mcsr@dtu.dk"},
    { name = "Thomas Røder", email = "s204377@dtu.dk"},
    { name = "Lukas Karkossa", email = "lalka@dtu.dk" }
]
dependencies = [
    "matplotlib",
    "numpy",
    "scipy", 
    "tqdm",
    "scikit-learn",
    "statsmodels",
    "seaborn"
]

[project.urls]
Repository = "https://github.com/DTUWindEducation/codecamp-netzero.git"